Add support of anonymous classes